# selvo

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  docker-compose.yml  pyproject.toml  selvo.policy.yml  server.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  daily_analysis.yml  deploy.yml  docker.yml  pages.yml  publish-mcp.yml  release.yml
data/: compliance_map.json
deploy/legacy/: Caddyfile  fly.toml
deploy/selfhost/: .env.example  Caddyfile.example  README.md  docker-compose.yml
docs/: POLICY_SCHEMA.md  ROADMAP.md  SCORING.md  STANDARD_GRAMMAR_PROPOSAL.md
docs/public/: HOW_IT_WORKS.md
helm/selvo/: Chart.yaml  values.yaml
scripts/: convert.py  update_compliance_map.py
selvo/: __init__.py  cli.py  mcp_server.py
selvo/analysis/: __init__.py  advisories.py  cache.py  changelog.py  collapse.py  compliance.py  cve.py  cve_timeline.py  cvss.py  debian_index.py  dep_confusion.py  distro_compare.py  distro_status.py  distro_tracker.py  ebpf_tracer.py  epss.py  exploit.py  fix.py  fleet.py  github.py  graph_metrics.py  llm.py  local_context.py  ossfuzz.py  osv_local.py  patch.py  patch_safety.py  policy.py  rdeps.py  reachability.py  redhat_status.py  runtime.py  scorecard.py  sla.py  slsa.py  trend.py  upstream.py  versions.py  watcher.py
selvo/api/: __init__.py  acks.py  auth.py  billing.py  dashboard.py  install.sh  server.py  silent_zero.py  tenancy.py
selvo/discovery/: __init__.py  arch.py  (+13 more)
tests/: conftest.py  test_api_auth.py  test_api_billing.py  test_compliance.py  test_dashboard.py  test_discovery_endpoints.py  test_ebpf_tracer.py  test_fix.py  test_mcp_smoke.py  test_osv_local.py  test_pipeline_integration.py  test_policy.py  test_reachability.py  test_runtime.py  test_scorer.py  test_slsa.py
vscode-extension/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
(+28 files in other folders)
